[tool.poetry]
name = "services"
version = "0.1.0"
description = ""
authors = ["Fabian <fab.h@gmx.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
llama-index-core = "^0.10.38.post2"
llama-index-legacy = "^0.9.48"
llama-index-llms-openai = "^0.1.20"
llama-index-embeddings-openai = "^0.1.10"
llama-index-program-openai = "^0.1.6"
llama-index-question-gen-openai = "^0.1.3"
llama-index-agent-openai = "^0.2.5"
llama-index-readers-file = "^0.1.22"
llama-index-multi-modal-llms-openai = "^0.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
